assigenment5/apache-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
      - name: apache
        image: httpd
        ports:
        - containerPort: 80
