assigenment5/apache-service.yml.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  labels:
    run: apache-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: apache
